--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="page">
     <div class="yellow-bar">
-        <div class="section" [routerLink]="['/home']"></div>
-        <div class="section" [routerLink]="['/home']" fragment="about"></div>
+        <div class="section" [routerLink]="['/home']">&bull;</div>
+        <div class="section" [routerLink]="['/home']" fragment="about">&bull;</div>
         <div class="section" [routerLink]="['/home']"
-            fragment="education-certification"></div>
+            fragment="education-certification">&bull;</div>
         <div class="section" [routerLink]="['/home']"
-            fragment="projects-experience"></div>
-        <div class="section" [routerLink]="['/home']" fragment="articles"></div>
-        <div class="section" [routerLink]="['/home']" fragment="contact"></div>
+            fragment="projects-experience">&bull;</div>
+        <div class="section" [routerLink]="['/home']" fragment="articles">&bull;</div>
+        <div class="section" [routerLink]="['/home']" fragment="contact">&bull;</div>
     </div>
 
     <header>
