--- a/src/app/home/projects-experience/proj-exp-item/proj-exp-item.component.html
+++ b/src/app/home/projects-experience/proj-exp-item/proj-exp-item.component.html
@@ -1,1 +1,8 @@
-<p>proj-exp-item works!</p>
+
+<div>
+    <img
+        src="https://source.unsplash.com/random/200x200?react,code,design/"
+        alt="carousel-img">
+    <h3>Tutorial Showcaser</h3>
+    <p><span>React</span>,<span>Firebase functions</span></p>
+</div>
