--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -81,12 +81,13 @@ border: 1px solid rgba(255, 255, 255, 0.45);
     height: 50vh;
 
     display: grid;
-    align-content: space-between;
+    /* align-content: space-between; */
 }
 
-.yellow-bar>*{
+.yellow-bar div{
     background: var(--main-colour);
-    height: 4rem;
+    display: grid;
+    place-items: center;
 }
 
 .yellow-bar:first-child, .yellow-bar:last-child{
