--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <main class="background-dark">
     <div class="page-container">
-        <div class="footer-grid">
+        <div class="footer-grid px-1">
             <div class="socials">
                 <a href="https://github.com/El-Nico" target="_blank"
                     aria-label="Homepage"
@@ -14,10 +14,12 @@
                 </a>
             </div>
             <div class="copyright">
+
                 <p>Copyright &copy; 2023
                     <a href="https://nicholas-eruba.com" target="_blank">Nicholas
                         Chibuike-Eruba</a>
                     All Rights Reserved</p>
+
             </div>
         </div>
 
