--- a/src/styles.css
+++ b/src/styles.css
@@ -138,6 +138,12 @@ ul {
   color: #fff;
 }
 
+.background-highlighted, .bg-highlighted{
+  background: var(--main-colour) !important;
+  /* background: yellow; */
+  /* color: #fff; */
+}
+
 .bg-secondary {
   background: var(--secondary-color);
   color: #fff;
@@ -198,27 +204,3 @@ a[class^='btn-']:hover,
 input[class^='btn-']:hover{
   background-color: var(--main-colour);
 } 
-
-::-webkit-scrollbar {
-  width: 2em;
-  height: 1em;
-}
-
-::-webkit-scrollbar-track {
-  background: hsl(120 75% 50% / 1);
-  border-radius: 100vw;
-  margin-block: 0.5em;
-}
-
-::-webkit-scrollbar-thumb {
-  background: hsl(120 100% 20% / 1);
-  border: 0.25em solid hsl(120 75% 50% / 1);
-  border-radius: 100vw;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: hsl(120 100% 10% / 1);
-}
-
-/* custom vertical scrollbar */
-@import "./custom-scrollbar-vertical.css"
