Fix UI & Responsive

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,7 +1,10 @@
 <div class="page">
-    <header>
-        <app-navbar [bgMode]="'bg-dark'"></app-navbar>
-    </header>
-    <main><p>article works!</p></main>
-    <app-footer></app-footer>
+    <!-- <div class="page-container"> -->
+        <header>
+            <app-navbar [bgMode]="'bg-dark'"></app-navbar>
+        </header>
+        <main><p>article works!</p></main>
+        <app-footer></app-footer>
+    <!-- </div> -->
 </div>
+
