--- a/src/app/home/education-certification/edu-cert-item/edu-cert-item.component.html
+++ b/src/app/home/education-certification/edu-cert-item/edu-cert-item.component.html
@@ -5,8 +5,10 @@
             alt="carousel-img">
     </div>
 
-    <h3 class="title">Bsc. Computing Level 7</h3>
-    <p><span class="pill-tag">college</span><span class="pill-tag">level 7</span>
-        <span class="pill-tag">college</span><span class="pill-tag">level 7</span>
-    </p>
+    <div class="container-item">
+        <h3 class="title">Bsc. Computing Level 7</h3>
+        <p><span class="pill-tag">college</span><span class="pill-tag">level 7</span>
+            <span class="pill-tag">college</span><span class="pill-tag">level 7</span>
+        </p>
+    </div>
 </div>
