--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="page">
     <div class="yellow-bar">
-        <div class="section" [routerLink]="['/home']">&bull;</div>
-        <div class="section" [routerLink]="['/home']" fragment="about">&bull;</div>
+        <div class="section" [routerLink]="['/home']" [matTooltip]="'Home'" [matTooltipPosition]="'right'"> <fa-icon [icon]="faHome" style="font-size: 8px;"></fa-icon></div>
+        <div class="section" [routerLink]="['/home']" fragment="about" [matTooltip]="'About'" [matTooltipPosition]="'right'"><fa-icon [icon]="faUser" style="font-size: 8px;"></fa-icon></div>
+        <!-- <div class="section" [routerLink]="['/home']"
+            fragment="education-certification" [matTooltip]="'Education/Certification'" [matTooltipPosition]="'right'"><fa-icon [icon]="faSchool" style="font-size: 8px;"></fa-icon></div> -->
         <div class="section" [routerLink]="['/home']"
-            fragment="education-certification">&bull;</div>
-        <div class="section" [routerLink]="['/home']"
-            fragment="projects-experience">&bull;</div>
-        <div class="section" [routerLink]="['/home']" fragment="articles">&bull;</div>
-        <div class="section" [routerLink]="['/home']" fragment="contact">&bull;</div>
+            fragment="projects-experience" [matTooltip]="'Project/Experience'" [matTooltipPosition]="'right'"><fa-icon [icon]="faProject" style="font-size: 8px;"></fa-icon></div>
+        <div class="section" [routerLink]="['/home']" fragment="articles" [matTooltip]="'Articles'" [matTooltipPosition]="'right'"><fa-icon [icon]="faNewspaper" style="font-size: 8px;"></fa-icon></div>
+        <div class="section" [routerLink]="['/home']" fragment="contact" [matTooltip]="'Contact'" [matTooltipPosition]="'right'"><fa-icon [icon]="faPhone" style="font-size: 8px;"></fa-icon></div>
     </div>
 
     <header>
@@ -17,7 +17,7 @@
 
     <main>
         <app-about id="about"></app-about>
-        <app-education-certification id="education-certification"></app-education-certification>
+        <!-- <app-education-certification id="education-certification"></app-education-certification> -->
         <app-projects-experience id="projects-experience"></app-projects-experience>
         <app-articles id="articles"></app-articles>
         <app-contact id="contact"></app-contact>
