--- a/src/app/home/projects-experience/proj-exp-item/proj-exp-item.component.html
+++ b/src/app/home/projects-experience/proj-exp-item/proj-exp-item.component.html
@@ -2,7 +2,7 @@
 <div>
     <img
         src="https://source.unsplash.com/random/200x200?react,code,design/"
-        alt="carousel-img">
+        alt="carousel-img" class="">
     <h3>Tutorial Showcaser</h3>
     <p><span>React</span>,<span>Firebase functions</span></p>
 </div>
