--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <main class="background-dark">
-    <div class="page-container">
+    <div class="padding-container">
         <div class="footer-grid px-1">
             <div class="socials">
                 <a href="https://github.com/El-Nico" target="_blank"
