--- a/src/app/home/about/about.component.css
+++ b/src/app/home/about/about.component.css
@@ -1,19 +1,21 @@
 .page{
-    height: 100vh;
+    /* height: 100vh; */
     padding-inline: 2rem;
     display: grid;
+    padding: 4rem 0px 6rem 0px;
 }
 .yellow-bar{
     width: 4px;
-   height: 100%;
+    height: 100%;
     background-color: var(--main-colour);
     margin-inline: 1rem;
 }
 
 main{
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 1fr, 4px, 1fr;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    gap: 10px;
     /* background: var(--medium-colour); */
 }
 
@@ -29,6 +31,11 @@ main{
     margin: 0 auto 1rem auto;
 }
 
+img {
+    border-radius: 8px;
+    width: 200px;
+}
+
 .about-text-container{
     text-align: justify;
     padding: 1rem 0.5rem;
@@ -41,10 +48,6 @@ main{
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen
 and (max-width : 600px) {
-    main{
-        grid-template-columns:1fr;
-        grid-template-rows: 1fr 4px 1fr;
-    }
 
     .message-input textarea{
         height: 50px;
