--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,18 +1,18 @@
-<div class="page background-light">
+<div class="page background-white">
         <div class="page-container">
-                <div class="header">
+                <div class="header"  data-aos="fade-in" data-aos-duration="2000">
                         <h1>About</h1>
                 </div>
 
-                <main class="background-medium p-1">
+                <main class="card-standard p-1">
 
-                        <img
+                        <img data-aos="fade-right" data-aos-duration="2000"
                                 src="https://source.unsplash.com/random/200x200?black,male,portrait/"
                                 alt="carousel-img">
 
-                        <div class="yellow-bar"></div>
+                        <!-- <div class="yellow-bar"></div> -->
 
-                        <div class="about-text-container">
+                        <div class="about-text-container" data-aos="fade-left" data-aos-duration="2000">
                                 <p class="about-text">Lorem ipsum dolor sit amet
                                         consectetur
                                         adipisicing
