--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,6 +1,6 @@
-<div class="page background-medium">
-    <div class="page-container" #pageContainer>
-        <header #header><h1>Articles</h1>
+<div class="page background-white">
+    <div class="padding-container" #pageContainer>
+        <header #header  data-aos="fade-in" data-aos-duration="2000"><h1>Articles</h1>
             <!-- <h2>Editor Picks</h2> -->
         </header>
         <!-- <main class="container background-light p-1"> -->
@@ -11,10 +11,9 @@
             </div> -->
 
             <!-- <div class="article-grid background-light p-1 custom-scrollbar-vertical"> -->
-            <div class="article-grid background-light p-1"
-                [ngStyle]="getMainHeight()">
+            <div class="article-grid"  data-aos="fade-in" data-aos-duration="2000">
                 <!-- <div class="article-item-container"> -->
-                <app-article-item *ngFor="let item of articleItems"
+                <app-article-item *ngFor="let item of articleItems" class="card-standard"
                     [item]="item" [class]="item.cardClasses"
                     [class.span-1]="isSingleSpan(item)"
                     [ngStyle]="translater()">
