--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,10 +1,10 @@
 <div class="page background-light">
-    <div class="page-container">
-        <header><h1 class="section-title">Contact Me</h1></header>
+    <div class="padding-container">
+        <header><h1 class="section-title" data-aos="fade-in" data-aos-duration="2000">Contact Me</h1></header>
         <!-- <div class="bottom-line"></div>
         <p class="lead">Here's how to reach me</p> -->
 
-        <main class="background-medium p-1">
+        <main class="" data-aos="fade-in" data-aos-duration="2000">
             <form class="form" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
                 <div class="text-fields">
 
@@ -13,9 +13,9 @@
                         <input type="text" id="name" formControlName="name"
                             placeholder="Name"
                             [class.invalid]="checkInvalid('name')"
-                            class="text-input"><br>
-                        <span class="error" *ngIf="checkInvalid('name')"> field
-                            empty or not valid</span>
+                            class="text-input input-standard"><br>
+                        <div class="error" *ngIf="checkInvalid('name')"> field
+                            empty or not valid</div>
                     </div>
 
                     <div class="email-input">
@@ -23,9 +23,9 @@
                         <input type="email" id="email" formControlName="email"
                             placeholder="E-Mail"
                             [class.invalid]="checkInvalid('email')"
-                            class="text-input"><br>
-                        <span class="error" *ngIf="checkInvalid('email')"> field
-                            empty or not valid</span>
+                            class="text-input input-standard"><br>
+                        <div class="error" *ngIf="checkInvalid('email')"> field
+                            empty or not valid</div>
                     </div>
 
                     <div class="subject-input">
@@ -34,9 +34,9 @@
                             formControlName="subject"
                             placeholder="Subject"
                             [class.invalid]="checkInvalid('subject')"
-                            class="text-input"><br>
-                        <span class="error" *ngIf="checkInvalid('subject')">
-                            field empty or not valid</span>
+                            class="text-input input-standard"><br>
+                        <div class="error" *ngIf="checkInvalid('subject')">
+                            field empty or not valid</div>
                     </div>
 
                     <div class="phone-input">
@@ -44,9 +44,9 @@
                         <input type="number" id="phone" formControlName="phone"
                             placeholder="Phone Number"
                             [class.invalid]="checkInvalid('phone')"
-                            class="text-input"><br>
-                        <span class="error" *ngIf="checkInvalid('phone')"> field
-                            empty or not valid</span>
+                            class="text-input input-standard"><br>
+                        <div class="error" *ngIf="checkInvalid('phone')"> field
+                            empty or not valid</div>
                     </div>
 
                     <div class="message-input">
@@ -55,11 +55,11 @@
                             placeholder="Write message.."
                             style="width: 100%;"
                             [class.invalid]="checkInvalid('message')"
-                            class="text-input"></textarea>
-                        <span class="error" *ngIf="checkInvalid('message')">
-                            field empty or not valid</span>
+                            class="text-input  input-standard"></textarea>
+                        <div class="error" *ngIf="checkInvalid('message')">
+                            field empty or not valid</div>
                     </div>
-                    <button type="submit" class="btn-dark">Submit</button>
+                    <button type="submit" class="btn-standard btn-dark">Submit</button>
                 </div>
 
             </form>
