--- a/src/app/home/education-certification/edu-cert-item/edu-cert-item.component.css
+++ b/src/app/home/education-certification/edu-cert-item/edu-cert-item.component.css
@@ -12,7 +12,13 @@ img{
     
         width: 100%;
        object-fit: cover; 
+       border-top-left-radius: 14px;
+       border-top-right-radius: 14px;
        
+}
+
+.container-item {
+    padding: 6px;
 }
 
 .title{
@@ -20,7 +26,7 @@ img{
 }
 
 .pill-tag{
-    background-color: #ddd;
+    background-color: #ededed;
     border: none;
     color: black;
     padding: 0.2rem 0.4rem;
@@ -28,6 +34,7 @@ img{
     text-decoration: none;
     display: inline-block;
     margin: 4px 2px;
+    font-size: 10px;
     cursor: pointer;
-    border-radius: 16px;
+    border-radius: 8px;
 }
