--- a/src/app/home/education-certification/education-certification.component.css
+++ b/src/app/home/education-certification/education-certification.component.css
@@ -1,8 +1,9 @@
 .page{
-    height: 100vh;
+    /* height: 100vh; */
     padding-inline: 2rem;
     display: grid;
     grid-auto-columns: 1fr;
+    padding: 2rem 10px 4rem 10px;
     /* padding-bottom:2rem ; */
 }
 
