--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,21 +14,23 @@
 
 header{
 /* background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790')  no-repeat 20% 30% / cover; */
-background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790')  no-repeat center center/ cover;
+/* background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790')  no-repeat center center/ cover; */
 position: relative;
+
+background: linear-gradient(90deg,#1e273e 0%,#0f172a 100%);
 height: 100vh;
 display: grid;
 z-index: 3;
 }
 header::before {
-    content: "";
+    /* content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
-    z-index: 1;
+    z-index: 1; */
 }
 
 
@@ -60,9 +62,12 @@ main{
     grid-column: 1/1;
 } */
 
+.yellow-bar .section {
+    cursor: pointer;
+}
 .yellow-bar{
     /* positioning */
-    z-index: 1;
+    z-index: 5;
     position: fixed;
     left: 0.5rem;
      /* top: 0; */
