--- a/src/app/home/projects-experience/projects-experience.component.css
+++ b/src/app/home/projects-experience/projects-experience.component.css
@@ -1,7 +1,7 @@
 .page{
-    height: 100vh;
-    padding-inline: 2rem;
+    /* height: 100vh; */
     display: grid;
+    padding: 2rem 10px 4rem 10px;
 }
 
 
@@ -47,14 +47,20 @@ color: #fff;
     justify-content: center;
     /* grid-template-columns: 1fr 1fr; */
   }
-
+img {
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+}
   main{
-    background-image: url(../../../assets/gradient-connection-background_52683-118589.avif);
+    /* background-image: url(../../../assets/gradient-connection-background_52683-118589.avif); */
   }
   .min-5{
     min-height: 500px;
   }
 
+  .title-action {
+    margin-bottom: 20px;
+  }
   .title-action>button{
     cursor: pointer;
     background: orange;
@@ -88,9 +94,13 @@ color: #fff;
 
   .star-rating{
     height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
   }
 
-  .rating-5>*:nth-child(-n+5){
+  /* .rating-5>*:nth-child(-n+5){
     background: orange;
       }
       .rating-4>*:nth-child(-n+4){
@@ -105,6 +115,23 @@ color: #fff;
                                         
   .rating-1>*:nth-child(-n+1){
 background: orange;
+  } */
+
+
+  .container-swiper {
+    max-width: 90vw;
+    margin: 0 auto;
+    padding: 10px;
+  }
+  .star {
+    color: orange;
+    fill: orange;
+  }
+  .desc-container {
+    padding: 0px 10px 10px 10px;
+  }
+  .item-container {
+    padding: 10px;
   }
 
   .project-carousel{
