--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -5,9 +5,13 @@ main{
 }
 
 .footer-grid{
+    margin-bottom: 10px;
+    margin-top: 10px;
     color: #fff;
-    display: grid;
-    grid-auto-flow: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
     /* align-items: center; */
     
 /* #0d0d0d
@@ -17,8 +21,8 @@ main{
 #404040
 #4d4d4d
 #595959 */
-    background: #4d4d4d;
-    place-content: center;
+    /* background: #4d4d4d; */
+    /* place-content: center; */
 }
 
 a{
@@ -51,7 +55,7 @@ gap: 0.2rem;
 
 
 .copyright {
-text-align: right;
+text-align: right;;
 }
 
 .copyright p{
@@ -72,8 +76,7 @@ text-align: right;
 and (max-width : 600px) {
 /* Styles */
 .footer-grid{
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    flex-direction: column;
     /* place-content: center; */
 }
 
