--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -1,17 +1,25 @@
-.page{
-    color: #fff;
-}
-
-
 h3{
     padding: 1rem;
 }
 
 
+.navbars {
+    top: 0;
+    width: 100%;
+    padding-bottom: 10px;
+    box-shadow: 0 4px 8px #0003;
+}
 
 .nav-container{
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+    margin-top: 10px;
+    display: flex;
+    padding-left: 30px;
+    padding-right: 30px;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;;
+    /* display: grid;
+    grid-template-columns: 1fr 4fr; */
 }
 
 #logo{
@@ -22,21 +30,21 @@ h3{
     color: #fff;
 }
 
+
+.nav-links ul{  
+    gap: 20px;
+}
 .nav-links{
-    max-width: 100vw;
+    /* max-width: 100vw; */
 }
 
 
 ul{
-    /* justify-self: end; */
+    justify-content: end;
     display: flex;
     /* flex-wrap: wrap; */
     max-width: 100vw;
-}
 
-ul>Li{
-    /* padding: 0rem 0.5rem; */
-    flex:1;
 }
 
 ul li a{
@@ -62,9 +70,6 @@ ul>li>a.current{
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen
 and (max-width : 600px) {
-    .nav-container{
-        grid-template-columns: 1fr;
-    }
 
     #logo{
         justify-self: center; 
